--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,14 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div>
-      <% if (currentUser){ %>
-      <a href="/logout">Logout</a>
-      <% }else{ %>
-      <a href="/login">Login</a> <a href="/sign-up">Sign Up</a>
-      <% } %>
-    </div>
-    <div>hello <% if(currentUser){ %> <%= currentUser.username %> <% } %></div>
+    <div></div>
     <%= stuff %>
     <a href="/protectedPage">Protected Page</a>
   </body>
