--- a/Frontend/blogfrontend/src/index.css
+++ b/Frontend/blogfrontend/src/index.css
@@ -1,68 +1,94 @@
+@font-face {
+  font-family: jetBrains-mono;
+  src: url("./fonts/JetBrainsMono-Regular.ttf");
+  font-weight: normal;
+}
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  --primary: #ffffff;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --secondary-1: #01040f;
+  --secondary-2: #1e2025;
+  --secondary-3: #35373d;
+  --secondary-4: #4f5055;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --success: #22946e;
+  --danger: #9c2121;
+}
+
+html {
+  font-size: 10px;
+  box-sizing: border-box;
+}
+
+* {
+  padding: 0;
+  margin: 0px;
+  font-family: jetBrains-mono, sans-serif;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+/* * {
+  outline: 1px solid var(--danger);
+} */
+
+body {
+  min-height: 100vh;
+  min-height: 100svh; /* for mobile so the view port automatically accounts for the address bar going up and down*/
+  /* this is to make the rest of the page a flex container that way the bottom of the content will grow if its not big enough to fill the page */
+  display: flex;
+  /* same with this*/
+  flex-direction: column;
+  background-color: #b8b8b8;
+  font-size: 16px;
+}
+
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+
+input,
+button,
+textarea,
+select {
+  font-size: inherit;
+  font-family: inherit;
+}
+
+input {
+  padding: 0px 0px;
+  border: black solid 1px;
+}
+
+input:focus {
+  border: black solid 1px;
+  box-shadow: none;
+  outline: none;
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+  text-decoration: none;
+  color: inherit;
 }
 
-body {
-  margin: 0;
+a:visited {
+  text-decoration: none;
+  color: inherit;
+}
+
+.pageContent {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  flex-direction: column;
+  justify-content: center;
+  width: 70vw;
+  margin: 10px auto;
 }
